--- a/terrapin.html
+++ b/terrapin.html
@@ -30,13 +30,32 @@ div {
     <div id="complex-transform">
 	<p>Represent complex numbers <i>z</i> as pairs <code>[x, y]</code>. Transform these through some complex-valued function <i>f</i>, and graphically represent <i>f</i>'s action by showing how vertical and horizontal lines are transformed.</p>
 	<p>In particular, we show below linear fractional transformations, transformations of the form f(z) = (az + b) / (cz + d) where a, b, c, d &isin; C, the set of complex numbers.</p>
+	<div id="value-store">
+          <table>
+	    <thead><td>Variable</td><td>Real component</td><td>Imaginary component</td></thead>
+	    <tr><td>a</td><td><input type="text" id="a_r" name="a_r" value="2"/></td><td><input type="text" id="a_i" name="a_i" value="1"/></td></tr>
+	    <tr><td>b</td><td><input type="text" id="b_r" name="b_r" value="0"/></td><td><input type="text" id="b_i" name="b_i" value="0"/></td></tr>
+	    <tr><td>c</td><td><input type="text" id="c_r" name="c_r" value="0"/></td><td><input type="text" id="c_i" name="c_i" value="0"/></td></tr>
+	    <tr><td>d</td><td><input type="text" id="d_r" name="d_r" value="1"/></td><td><input type="text" id="d_i" name="d_i" value="0"/></td></tr>
+	  </table>
+          <button id="go-button">Go</button>
+	</div>
       <div id="z-plane" class="plane"></div>
       <div id="w-plane" class="plane"></div>
       <script type="text/javascript">
+function makePlane(planeName) {
+  return d3.select(planeName).append("svg")
+    .attr("height", h)
+    .attr("width", w)
+    .append("g")
+    .attr("transform", "translate(" + h / 2 + ", " + h / 2 + ")");
+}
+
+// Initial conditions, data.
 h = 300;
-w = 300;
+w = h;
 var grid = [];
-for(i = 0; i <= Math.max(w, h); i += 10) {
+for(i = 0 - (h / 2); i <= h / 2; i += 10) {
   grid.push(i);
 }
 vlines = [];
@@ -51,33 +70,51 @@ for(var i in grid) {
   vlines.push(vline);
   hlines.push(hline);
 }
+var zlines = vlines.concat(hlines);
+var wlines = transformLines(zlines, f);
 
-function makePlane(planeName) {
-  return d3.select(planeName).append("svg")
-    .attr("height", h)
-    .attr("width", w);
+var zplane = makePlane("#z-plane", h, w);
+var wplane = makePlane("#w-plane", h, w);
+
+makeLines(zplane, zlines);
+makeLines(wplane, wlines);
+
+d3.select("#go-button").on("click", function() {
+  for (var lineI = 0; lineI < wlines.length; lineI++) {
+    for (var pointI = 0; pointI < wlines[lineI].length; pointI++) {
+      wlines[lineI][pointI] = f(zlines[lineI][pointI]);
+    }
+  }
+//  wplane.selectAll("path")
+  drawLines(wplane, transformLines(zlines, f));
+});
+
+function arr_to_path(line) {
+  var d = "M" + (line[0][0] + " " + line[0][1]) + " ";
+  for(i in line) {
+    d = d + "L" + line[i][0] + " " + line[i][1] + " ";
+  }
+  return d;
 }
 
 function drawLines(planeDiv, arr) {
-  planeDiv.selectAll("line")
+  planeDiv.selectAll(".line")
+    .data(arr)
+    .transition()
+    .ease("linear")
+    .attr("d", arr_to_path);
+}
+
+function makeLines(planeDiv, arr) {
+  planeDiv.selectAll(".line")
     .data(arr)
     .enter().append("path")
       .attr("fill", "none")
       .attr("stroke-width", 2)
       .attr("stroke", "black")
       .attr("class", "line")
-      .attr("d", function(l) {
-        var d = "M" + (l[0][0] + " " + l[0][1]) + " ";
-        for(i in l) {
-          d = d + "L" + l[i][0] + " " + l[i][1] + " ";
-        }
-        return d;
-      });
+      .attr("d", arr_to_path);
 }
-
-var zplane = makePlane("#z-plane", h, w);
-drawLines(zplane, vlines);
-drawLines(zplane, hlines);
 
 // c_mult :: C -> C -> C
 function c_mult(z, w) {
@@ -91,34 +128,25 @@ function c_add(z, w) {
   return [a + c, b + d];
 }
 
-// c_conj :: C -> C
-function c_conj(z) {
-  return [z[0], -z[1]];
-}
-
-// c_norm :: C -> R
-function c_norm(z) {
-  return Math.sqrt(z[0]*z[0] + z[1]*z[1])
-}
-
 // c_div :: C -> C -> C
 function c_div(z, w) {
   var a = z[0]; var b = z[1]; var c = w[0]; var d = w[1];
   return [(a*c + b*d) / (c*c + d*d) , (b*c - a*d) / (c*c + d*d)];
 }
 
-// z, a, b, c, d \elem \bbold{C}
+// moebius :: C -> C -> C -> C -> C
 function moebius(z, a, b, c, d) {
   // f(z) = (az + b)/(cz + d)
   return c_div((c_add(c_mult(a, z), b)), (c_add(c_mult(c, z), d)));
 }
 
-function f(pair) {
-  return moebius(pair, [2, 1], [150, -100], [0, 0], [1, 0]);
-}
+function f(z) {
+  a = [parseInt(document.getElementById("a_r").value), parseInt(document.getElementById("a_i").value)];
+  b = [parseInt(document.getElementById("b_r").value), parseInt(document.getElementById("b_i").value)];
+  c = [parseInt(document.getElementById("c_r").value), parseInt(document.getElementById("c_i").value)];
+  d = [parseInt(document.getElementById("d_r").value), parseInt(document.getElementById("d_i").value)];
 
-function id(pair) {
-  return moebius(pair, [1, 0], [0, 0], [0, 0], [1, 0]);
+  return moebius(z, a, b, c, d);
 }
 
 // A line is an array of points, which are two-element arrays.
@@ -140,10 +168,6 @@ function transformLines(lines, f) {
   }
   return linesInW;
 }
-
-var wplane = makePlane("#w-plane", h, w);
-drawLines(wplane, transformLines(vlines, f));
-drawLines(wplane, transformLines(hlines, f));
      </script>
     </div>
   </body>
