--- a/terrapin.html
+++ b/terrapin.html
@@ -83,6 +83,16 @@ makeLines(zplane, zlines);
 makeLines(wplane, wlines);
 
 d3.select("#go-button").on("click", function() {
+  a = [parseInt(document.getElementById("a_r").value), parseInt(document.getElementById("a_i").value)];
+  b = [parseInt(document.getElementById("b_r").value), parseInt(document.getElementById("b_i").value)];
+  c = [parseInt(document.getElementById("c_r").value), parseInt(document.getElementById("c_i").value)];
+  d = [parseInt(document.getElementById("d_r").value), parseInt(document.getElementById("d_i").value)];
+
+  if (a*d + b*c == 0) {
+    alert("Not a Moebius transform!");
+  }
+
+  // Mutate the w-plane data
   for (var lineI = 0; lineI < wlines.length; lineI++) {
     for (var pointI = 0; pointI < wlines[lineI].length; pointI++) {
       wlines[lineI][pointI] = f(zlines[lineI][pointI]);
