--- a/terrapin.html
+++ b/terrapin.html
@@ -50,8 +50,7 @@ function makePlane(planeName) {
     .append("g")
     .attr("fill", "none")
     .attr("stroke-width", 2)
-    .attr("stroke", "black")
-    .attr("transform", "translate(" + h / 2 + ", " + h / 2 + ")");
+    .attr("stroke", "black");
 
 /*
   svg = d3.select(planeName).append("svg")
@@ -65,8 +64,7 @@ function makePlane(planeName) {
   svg.append("g")
     .attr("fill", "none")
     .attr("stroke-width", 2)
-    .attr("stroke", "black")
-    .attr("transform", "translate(" + h / 2 + ", " + h / 2 + ")");
+    .attr("stroke", "black");
 
   return svg;
 */
@@ -87,14 +85,14 @@ var h = 300;
 var w = h;
 var f = function(z) { return z; };
 
-var min_x = -100, max_x = 100
-var grid = d3.range(min_x, max_x + 1, 10);
+var min_x = -2, max_x = 2
+var grid = d3.range(min_x, max_x + 1, 0.1);
 var x = d3.scale.linear()
   .domain([min_x, max_x])
-  .range([-h / 2, h / 2]);
+  .range([0, h]);
 var y = d3.scale.linear()
   .domain([min_x, max_x])
-  .range([h / 2, -h / 2]); // Invert the scale so the origin is in the BOTTOM left corner
+  .range([h, 0]); // Invert the scale so the origin is in the BOTTOM left corner
 
 // TODO: This screams for an elegant function solution that
 // I don't have time to think about right now.
@@ -141,7 +139,9 @@ d3.select("#go-button").on("click", function() {
 });
 
 function drawLines(planeDiv, arr) {
-  var line = d3.svg.line();
+  var line = d3.svg.line()
+    .x(function(d) { return x(d[0]); })
+    .y(function(d) { return y(d[1]); });
 
   planeDiv.selectAll(".line")
     .transition()
@@ -150,7 +150,9 @@ function drawLines(planeDiv, arr) {
 }
 
 function makeLines(planeDiv, arr) {
-  var line = d3.svg.line();
+  var line = d3.svg.line()
+    .x(function(d) { return x(d[0]); })
+    .y(function(d) { return y(d[1]); });
 
   planeDiv.selectAll(".line")
     .data(arr)
