Well, that's not right. Complex division was completely broken.

--- a/terrapin.html
+++ b/terrapin.html
@@ -146,7 +146,7 @@ function c_add(z, w) {
 // c_div :: C -> C -> C
 function c_div(z, w) {
   var a = z[0]; var b = z[1]; var c = w[0]; var d = w[1];
-  return complex((a*c + b*d) / c*c + d*d , (b*c - a*d) / c*c + d*d);
+  return complex((a*c + b*d) / (c*c + d*d) , (b*c - a*d) / (c*c + d*d));
 }
 
 // moebius :: C -> C -> C -> C -> C
