--- a/moebius.html
+++ b/moebius.html
@@ -17,223 +17,231 @@
 	<p>Represent complex numbers <i>z</i> as pairs <code>[x, y]</code>. Transform these through some complex-valued function <i>f</i>, and graphically represent <i>f</i>'s action by showing how vertical and horizontal lines are transformed.</p>
 	<p>In particular, we show below linear fractional transformations, transformations of the form f(z) = (az + b) / (cz + d) where a, b, c, d &isin; C, the set of complex numbers.</p>
 	<div id="value-store">
-          <table>
+	  <table>
 	    <thead><td>Variable</td><td>Real component</td><td>Imaginary component</td></thead>
-	    <tr><td>a</td><td><input type="text" id="a_r" name="a_r" value="1"/></td><td><input type="text" id="a_i" name="a_i" value="0"/></td></tr>
-	    <tr><td>b</td><td><input type="text" id="b_r" name="b_r" value="0"/></td><td><input type="text" id="b_i" name="b_i" value="0"/></td></tr>
-	    <tr><td>c</td><td><input type="text" id="c_r" name="c_r" value="0"/></td><td><input type="text" id="c_i" name="c_i" value="0"/></td></tr>
-	    <tr><td>d</td><td><input type="text" id="d_r" name="d_r" value="1"/></td><td><input type="text" id="d_i" name="d_i" value="0"/></td></tr>
+	    <tr><td>a</td><td><input type="text" id="a_r" name="a_r" value="0"/></td><td><input type="text" id="a_i" name="a_i" value="0"/></td></tr>
+	    <tr><td>b</td><td><input type="text" id="b_r" name="b_r" value="1"/></td><td><input type="text" id="b_i" name="b_i" value="0"/></td></tr>
+	    <tr><td>c</td><td><input type="text" id="c_r" name="c_r" value="1"/></td><td><input type="text" id="c_i" name="c_i" value="0"/></td></tr>
+	    <tr><td>d</td><td><input type="text" id="d_r" name="d_r" value="0"/></td><td><input type="text" id="d_i" name="d_i" value="0"/></td></tr>
 	  </table>
-          <button id="go-button">Go</button>
+	  <button id="go-button">Go</button>
 	</div>
       <div id="z-plane" class="plane"></div>
       <div id="w-plane" class="plane"></div>
       <script type="text/javascript">
-function memoise_f() {
-  // Return the Moebius transformation corresponding to the input parameters.
-  a = [parseFloat(document.getElementById("a_r").value), parseFloat(document.getElementById("a_i").value)];
-  b = [parseFloat(document.getElementById("b_r").value), parseFloat(document.getElementById("b_i").value)];
-  c = [parseFloat(document.getElementById("c_r").value), parseFloat(document.getElementById("c_i").value)];
-  d = [parseFloat(document.getElementById("d_r").value), parseFloat(document.getElementById("d_i").value)];
-  return function(z) {
-    return moebius(z, a, b, c, d);
-  }
-}
-
-function makePlane(planeName, h, w, lines) {
-  var r = d3.select(planeName).append("svg")
-    .attr("height", h)
-    .attr("width", w)
-    .append("g")
-    .attr("fill", "none")
-    .attr("stroke-width", 2)
-    .attr("stroke", "black");
-  makeLines(r, lines);
-  return r;
-}
-
-// Initial conditions, data.
-var h = 300;
-var w = h;
-var f = memoise_f();
-
-var min_x = -2, max_x = 2
-// Distance between lines
-var grid = d3.range(min_x, max_x + 1, 0.2);
-// Distance between points on a line
-var pointsOnLine = d3.range(min_x, max_x + 1, 0.05);
-var x = d3.scale.linear()
-  .domain([min_x, max_x])
-  .range([0, h]);
-var y = d3.scale.linear()
-  .domain([min_x, max_x])
-  .range([h, 0]); // Invert the scale so the origin is in the BOTTOM left corner
-var lineMaker = d3.svg.line()
-    .x(function(d) { return x(d[0]); })
-    .y(function(d) { return y(d[1]); });
-
-function hlines(gridResolution, pointResolution) {
-  return gridResolution.map(function(i) {
-    return pointResolution.map(function(j) {
-      return complex(j, i);
-    });
-  });
-}
-
-function vlines(gridResolution, pointResolution) {
-  return gridResolution.map(function(i) {
-    return pointResolution.map(function(j) {
-      return complex(i, j);
-    });
-  });
-}
-
-function make_grid(gridResolution, pointResolution) {
-  return hlines(gridResolution, pointResolution)
-           .concat(vlines(gridResolution, pointResolution));
-}
-
-var zlines = make_grid(grid, pointsOnLine);
-var wlines = make_grid(grid, pointsOnLine);
-
-var zplane = makePlane("#z-plane", h, w, zlines);
-var wplane = makePlane("#w-plane", h, w, wlines);
-
-d3.select("#go-button").on("click", function() {
-  f = memoise_f();
-
-  if (c_zero(c_sub(c_mult(a, d), c_mult(b, c)))) {
-    alert("Not a Moebius transform!\nMerely a constant function f(z) = " + JSON.stringify(f(complex(1, 0))));
-  }
-
-  // Mutate the w-plane data in place so d3 can automatically
-  // pick up the changes.
-  var last_w = [0,0];
-  for (var lineI = 0; lineI < wlines.length; lineI++) {
-    for (var pointI = 0; pointI < wlines[lineI].length; pointI++) {
-      w = f(zlines[lineI][pointI]);
-      if (w == Inf) {
-        // If f(z) = Inf then we pretend that Inf is really a point
-        // outside of visual range that's on the ray drawn from
-        // the origin through last_w. Think of the resulting point
-        // as being the closest point to last_w on a circle centred
-        // on the origin and of infinite radius.
-
-        // Multiplying by n + 0i (n a real) means scaling without
-        // rotating.
-        w = c_mult(last_w, complex(100, 0));
-      }
-      wlines[lineI][pointI] = w;
-      last_w = w;
+window.onload = function() {
+  function memoise_f() {
+    // Return the Moebius transformation corresponding to the input parameters.
+    a = [parseFloat(document.getElementById("a_r").value), parseFloat(document.getElementById("a_i").value)];
+    b = [parseFloat(document.getElementById("b_r").value), parseFloat(document.getElementById("b_i").value)];
+    c = [parseFloat(document.getElementById("c_r").value), parseFloat(document.getElementById("c_i").value)];
+    d = [parseFloat(document.getElementById("d_r").value), parseFloat(document.getElementById("d_i").value)];
+    return function(z) {
+      return moebius(z, a, b, c, d);
     }
   }
+
+  function makePlane(planeName, h, w, lines) {
+    var r = d3.select(planeName).append("svg")
+      .attr("height", h)
+      .attr("width", w)
+      .append("g")
+      .attr("fill", "none")
+      .attr("stroke-width", 2)
+      .attr("stroke", "black");
+    makeLines(r, lines);
+    return r;
+  }
+
+  // Initial conditions, data.
+  var h = 300;
+  var w = h;
+  var f = memoise_f();
+
+  var min_x = -2, max_x = 2
+  // Distance between lines
+  var grid = d3.range(min_x, max_x + 1, 0.2);
+  // Distance between points on a line
+  var pointsOnLine = d3.range(min_x, max_x + 1, 0.05);
+  var x = d3.scale.linear()
+    .domain([min_x, max_x])
+    .range([0, h]);
+  var y = d3.scale.linear()
+    .domain([min_x, max_x])
+    .range([h, 0]); // Invert the scale so the origin is in the BOTTOM left corner
+  var lineMaker = d3.svg.line()
+      .x(function(d) { return x(d[0]); })
+      .y(function(d) { return y(d[1]); });
+
+  function hlines(gridResolution, pointResolution) {
+    return gridResolution.map(function(i) {
+      return pointResolution.map(function(j) {
+	return complex(j, i);
+      });
+    });
+  }
+
+  function vlines(gridResolution, pointResolution) {
+    return gridResolution.map(function(i) {
+      return pointResolution.map(function(j) {
+	return complex(i, j);
+      });
+    });
+  }
+
+  function make_grid(gridResolution, pointResolution) {
+    return hlines(gridResolution, pointResolution)
+	     .concat(vlines(gridResolution, pointResolution));
+  }
+
+  function update_wplane(zlines) {
+    var last_w = [0,0];
+    for (var lineI = 0; lineI < wlines.length; lineI++) {
+      for (var pointI = 0; pointI < wlines[lineI].length; pointI++) {
+	w = f(zlines[lineI][pointI]);
+	if (w == Inf) {
+	  // If f(z) = Inf then we pretend that Inf is really a point
+	  // outside of visual range that's on the ray drawn from
+	  // the origin through last_w. Think of the resulting point
+	  // as being the closest point to last_w on a circle centred
+	  // on the origin and of infinite radius.
+
+	  // Multiplying by n + 0i (n a real) means scaling without
+	  // rotating.
+	  w = c_mult(last_w, complex(100, 0));
+	}
+	wlines[lineI][pointI] = w;
+	last_w = w;
+      }
+    }
+  }
+
+  var zlines = make_grid(grid, pointsOnLine);
+  var wlines = make_grid(grid, pointsOnLine);
+  var zplane = makePlane("#z-plane", h, w, zlines);
+  var wplane = makePlane("#w-plane", h, w, wlines);
+
+  update_wplane(zlines);
   drawLines(wplane, wlines);
-});
 
-function drawLines(planeDiv, arr) {
-  planeDiv.selectAll(".line")
-    .transition()
-    .ease("linear")
-    .attr("d", lineMaker);
-}
+  d3.select("#go-button").on("click", function() {
+    f = memoise_f();
 
-function makeLines(planeDiv, arr) {
-  planeDiv.selectAll(".line")
-    .data(arr)
-    .enter().append("path")
-      .attr("class", "line")
+    if (c_zero(c_sub(c_mult(a, d), c_mult(b, c)))) {
+      alert("Not a Moebius transform!\nMerely a constant function f(z) = " + JSON.stringify(f(complex(1, 0))));
+    }
+
+    // Mutate the w-plane data in place so d3 can automatically
+    // pick up the changes.
+    update_wplane(zlines);
+    drawLines(wplane, wlines);
+  });
+
+  function drawLines(planeDiv, arr) {
+    planeDiv.selectAll(".line")
+      .transition()
+      .ease("linear")
       .attr("d", lineMaker);
-}
-
-// The extended complex plane: complex numbers + the point at infinity.
-
-var Inf = new Object;
-Inf.toString = function() { return "Inf"; };
-
-var Zero = complex(0, 0);
-
-// complex :: R -> R -> C
-function complex(real, imaginary) {
-  return [real, imaginary];
-}
-
-// c_mult :: C -> C -> C
-function c_mult(z, w) {
-  if (z == Inf || w == Inf) { return Inf; }
-
-  var a = z[0]; var b = z[1]; var c = w[0]; var d = w[1];
-  return complex(a*c - b*d, a*d + b*c);
-}
-
-// c_add :: C -> C -> C
-function c_add(z, w) {
-  if (z == Inf || w == Inf) { return Inf; }
-
-  var a = z[0]; var b = z[1]; var c = w[0]; var d = w[1];
-  return complex(a + c, b + d);
-}
-
-// c_sub :: C -> C -> C
-function c_sub(z, w) {
-  if (z == Inf || w == Inf) { return Inf; }
-
-  var a = z[0]; var b = z[1]; var c = w[0]; var d = w[1];
-  return complex(a - c, b - d);
-}
-
-// c_div :: C -> C -> C
-function c_div(z, w) {
-  if (z == Inf) { return Inf; }
-  if (w == Inf) { return complex(0, 0); }
-  if (c_zero(w)) { return Inf; }
-
-  var a = z[0]; var b = z[1]; var c = w[0]; var d = w[1];
-
-  var denominator = c*c + d*d;
-  if (denominator < 1e-3) { return Inf; }
-
-  return complex((a*c + b*d) / denominator , (b*c - a*d) / denominator);
-}
-
-// c_norm :: C -> R
-function c_norm(z) {
-  return Math.sqrt(z[0]*z[0] + z[1]*z[1]);
-}
-
-// c_zero :: C -> Bool
-function c_zero(z) {
-  return c_norm(z) < 1e-3;
-}
-
-// moebius :: C -> C -> C -> C -> C
-function moebius(z, a, b, c, d) {
-  // f(z) = (az + b) / (cz + d)
-  if (z == Inf) {
-    return c_zero(c) ? Inf : c_div(a, c);
-  } else {
-    return c_div((c_add(c_mult(a, z), b)), (c_add(c_mult(c, z), d)));
   }
-}
 
-function log(s) {
-  return d3.select("body").append("p").text(s);
-}
-
-function assert_equal(a, b) {
-  // Using toString() is completely lame, but it means we can
-  // compare lists and integers easily.
-  if (a.toString() != b.toString()) {
-    log("Not equal: " + JSON.stringify(a) + " and " + JSON.stringify(b));
+  function makeLines(planeDiv, arr) {
+    planeDiv.selectAll(".line")
+      .data(arr)
+      .enter().append("path")
+	.attr("class", "line")
+	.attr("d", lineMaker);
   }
-}
 
-assert_equal(Inf, c_div(complex(1,0), complex(0,0)));
-assert_equal(complex(3,7), c_add(complex(1,3), complex(2,4)));
-assert_equal(Inf, c_add(Inf, complex(0,0)));
-assert_equal(Inf, c_add(complex(0,0), Inf));
-assert_equal(complex(0, 0), c_sub(complex(1, 1), complex(1, 1)));
-assert_equal(Inf, moebius(complex(0,0), complex(1, 0), Zero, complex(1, 0), Zero));
-assert_equal(complex(1, 0), moebius(complex(-2,-2), complex(1, 0), Zero, complex(1, 0), Zero));
+  // The extended complex plane: complex numbers + the point at infinity.
+
+  var Inf = new Object;
+  Inf.toString = function() { return "Inf"; };
+
+  var Zero = complex(0, 0);
+
+  // complex :: R -> R -> C
+  function complex(real, imaginary) {
+    return [real, imaginary];
+  }
+
+  // c_mult :: C -> C -> C
+  function c_mult(z, w) {
+    if (z == Inf || w == Inf) { return Inf; }
+
+    var a = z[0]; var b = z[1]; var c = w[0]; var d = w[1];
+    return complex(a*c - b*d, a*d + b*c);
+  }
+
+  // c_add :: C -> C -> C
+  function c_add(z, w) {
+    if (z == Inf || w == Inf) { return Inf; }
+
+    var a = z[0]; var b = z[1]; var c = w[0]; var d = w[1];
+    return complex(a + c, b + d);
+  }
+
+  // c_sub :: C -> C -> C
+  function c_sub(z, w) {
+    if (z == Inf || w == Inf) { return Inf; }
+
+    var a = z[0]; var b = z[1]; var c = w[0]; var d = w[1];
+    return complex(a - c, b - d);
+  }
+
+  // c_div :: C -> C -> C
+  function c_div(z, w) {
+    if (z == Inf) { return Inf; }
+    if (w == Inf) { return complex(0, 0); }
+    if (c_zero(w)) { return Inf; }
+
+    var a = z[0]; var b = z[1]; var c = w[0]; var d = w[1];
+
+    var denominator = c*c + d*d;
+    if (denominator < 1e-3) { return Inf; }
+
+    return complex((a*c + b*d) / denominator , (b*c - a*d) / denominator);
+  }
+
+  // c_norm :: C -> R
+  function c_norm(z) {
+    return Math.sqrt(z[0]*z[0] + z[1]*z[1]);
+  }
+
+  // c_zero :: C -> Bool
+  function c_zero(z) {
+    return c_norm(z) < 1e-3;
+  }
+
+  // moebius :: C -> C -> C -> C -> C
+  function moebius(z, a, b, c, d) {
+    // f(z) = (az + b) / (cz + d)
+    if (z == Inf) {
+      return c_zero(c) ? Inf : c_div(a, c);
+    } else {
+      return c_div((c_add(c_mult(a, z), b)), (c_add(c_mult(c, z), d)));
+    }
+  }
+
+  function log(s) {
+    return d3.select("body").append("p").text(s);
+  }
+
+  function assert_equal(a, b) {
+    // Using toString() is completely lame, but it means we can
+    // compare lists and integers easily.
+    if (a.toString() != b.toString()) {
+      log("Not equal: " + JSON.stringify(a) + " and " + JSON.stringify(b));
+    }
+  }
+
+  assert_equal(Inf, c_div(complex(1,0), complex(0,0)));
+  assert_equal(complex(3,7), c_add(complex(1,3), complex(2,4)));
+  assert_equal(Inf, c_add(Inf, complex(0,0)));
+  assert_equal(Inf, c_add(complex(0,0), Inf));
+  assert_equal(complex(0, 0), c_sub(complex(1, 1), complex(1, 1)));
+  assert_equal(Inf, moebius(complex(0,0), complex(1, 0), Zero, complex(1, 0), Zero));
+  assert_equal(complex(1, 0), moebius(complex(-2,-2), complex(1, 0), Zero, complex(1, 0), Zero));
+};
      </script>
     </div>
   </body>
