--- a/layered-moebius.html
+++ b/layered-moebius.html
@@ -37,102 +37,146 @@
             .concat(vlines(gridResolution, pointResolution));
         }
 
+        function draw_lines(planeDiv, arr, lineMaker) {
+          planeDiv.selectAll(".line")
+            .transition()
+            .ease("linear")
+            .attr("d", lineMaker);
+          return planeDiv;
+        }
+
+        function make_lines(planeDiv, arr, lineMaker) {
+          planeDiv.selectAll(".line")
+            .data(arr)
+            .enter().append("path")
+            .attr("class", "line")
+            .attr("d", lineMaker);
+          return planeDiv;
+        }
+
+        function make_plane(planeName, h, w) {
+          return d3.select(planeName).append("svg")
+            .attr("height", h)
+            .attr("width", w)
+            .append("g")
+            .attr("fill", "none")
+            .attr("stroke-width", 2)
+            .attr("stroke", "black");
+        }
+
+        function update_wplane(wlines, zlines, f) {
+          var last_w = Zero;
+          for (var lineI = 0; lineI < wlines.length; lineI++) {
+            for (var pointI = 0; pointI < wlines[lineI].length; pointI++) {
+              w = f(zlines[lineI][pointI]);
+              if (w == Inf) {
+                // If f(z) = Inf then we pretend that Inf is really a point
+                // outside of visual range that's on the ray drawn from
+                // the origin through last_w. Think of the resulting point
+                // as being the closest point to last_w on a circle centred
+                // on the origin and of infinite radius.
+
+                // Multiplying by n + 0i (n a real) means scaling without
+                // rotating.
+                w = cmult(last_w, complex(100, 0));
+              }
+              wlines[lineI][pointI] = w;
+              last_w = w;
+            }
+          }
+        }
+
         function setUpD3() {
           var h = w = 300;
-          var svg = d3.select("#w-transform").append("svg")
-                      .attr("height", h)
-                      .attr("width", w)
-                      .append("g")
-                      .attr("fill", "none")
-                      .attr("stroke-width", 2)
-                      .attr("stroke", "black");
-
           var min_x = -2, max_x = 2;
           var interline_distance = 0.2;
           var interpoint_distance = 0.05;
           var grid = d3.range(min_x, max_x + (interline_distance / 2), interline_distance);
           var points_on_line = d3.range(min_x, max_x + (interpoint_distance / 2), interpoint_distance);
-          var lines = make_grid(grid, points_on_line);
           var x = d3.scale.linear()
                     .domain([min_x, max_x])
                     .range([0, h]);
           var y = d3.scale.linear()
                     .domain([min_x, max_x])
                     .range([h, 0]); // Invert the scale so the origin is in the BOTTOM left corner
-          var lineMaker = d3.svg.line()
-                            .x(function(d) { return y(d[0]); })
-                            .x(function(d) { return y(d[1]); })
-          svg.selectAll("path")
-            .data(lines)
-            .attrib("d", lineMaker);
+          document.lineMaker = d3.svg.line()
+                            .x(function(d) { return x(d[0]); })
+                            .y(function(d) { return y(d[1]); });
+
+          document.zlines = make_grid(grid, points_on_line);
+          document.wlines = make_grid(grid, points_on_line);
+          document.wplane = make_lines(make_plane("#w-plane", h, w), document.wlines, document.lineMaker);
         };
 
         function setUpTangle() {
+            setUpD3();
+
             var element = document.getElementById("moebius");
 
             var tangle = new Tangle(element, {
                 initialize: function () {
                     this.f1_r = 0;
                     this.f1_i = 0;
-                    this.f2_r = 0;
-                    this.f2_i = 0;
-                    this.f3_r = 0;
+                    this.f3_r = 1;
                     this.f3_i = 0;
                     this.f4_r = 0;
                     this.f4_i = 0;
                 },
                 update: function () {
-                   this.f1c = complex(this.f1_r, this.f1_i);
-                   this.f2c = complex(this.f2_r, this.f2_i);
-                   this.f3c = complex(this.f3_r, this.f3_i);
-                   this.f4c = complex(this.f4_r, this.f4_i);
+                   var f1c = complex(this.f1_r, this.f1_i);
+                   var f3c = complex(this.f3_r, this.f3_i);
+                   var f4c = complex(this.f4_r, this.f4_i);
 
-                   this.f1 = function(z) {
+                   f1 = function(z) {
                      // Translation
-                     return cadd(z, this.f1c);
+                     return cadd(z, f1c);
                    };
-                   this.f2 = function(z) {
+                   f2 = function(z) {
                      // Inversion
-                     return cdiv(this.f2c, z);
+                     return cdiv(One, z);
                    };
-                   this.f3 = function(z) {
+                   f3 = function(z) {
                      // Dilation and rotation
-                     return cmult(this.f3c, z);
+                     return cmult(f3c, z);
                    };
-                   this.f4 = function(z) {
+                   f4 = function(z) {
                      // Translation
-                     return cadd(z, this.f4c);
+                     return cadd(z, f4c);
                    };
-                   this.moebius = function(z) { this.f4(this.f3(this.f2(this.f1(z)))); };
-                   this.a_r = this.f4c[0];
-                   this.a_i = this.f4c[1];
-                   this.b_r = cadd(cmult(this.f1c, this.f4c), cmult(this.f2c, this.f3c))[0];
-                   this.b_i = cadd(cmult(this.f1c, this.f4c), cmult(this.f2c, this.f3c))[1];
-                   this.d_r = this.f1c[0];
-                   this.d_i = this.f1c[1];
+                   moebius = function(z) { return f4(f3(f2(f1(z)))); };
+                   this.a_r = f4c[0];
+                   this.a_i = f4c[1];
+                   this.b_r = cadd(cmult(f1c, f4c), cmult(One, f3c))[0];
+                   this.b_i = cadd(cmult(f1c, f4c), cmult(One, f3c))[1];
+                   this.d_r = f1c[0];
+                   this.d_i = f1c[1];
+
+//                   if (czero(csub(cmult(a, d), cmult(b, c)))) {
+//                     alert("Not a M&ouml;bius transform!\nMerely a constant function f(z) = " + JSON.stringify(f(complex(1, 0))));
+//                   }
+
+                   // Mutate the w-plane data in place so d3 can automatically
+                   // pick up the changes.
+                   update_wplane(document.wlines, document.zlines, moebius);
+                   draw_lines(document.wplane, document.wlines, document.lineMaker);
                 }
             });
         };
-
-      function setUp() {
-        setUpTangle();
-        setUpD3();
-      };
     </script>
   </head>
-  <body onload="setUp();">
+  <body onload="setUpTangle();">
     <p>A M&ouml;bius transform may be viewed as the composition of four independent transformations:</p>
-    <p>f = f<sub>1</sub> o f<sub>2</sub> o f<sub>3</sub> o f<sub>4</sub>;
+    <p>f = f<sub>1</sub> o f<sub>2</sub> o f<sub>3</sub> o f<sub>4</sub>;</p>
     <div id="moebius">
       <ol>
-	<li>f<sub>1</sub> = (<span data-var="f1_r" class="TKAdjustableNumber" data-min="-2" data-max="2" data-step="0.0625"></span> + <span data-var="f1_i" class="TKAdjustableNumber" data-min="-2" data-max="2" data-step="0.0625"></span><i>i</i>) + z</li>
-	<li>f<sub>2</sub> = (<span data-var="f2_r" class="TKAdjustableNumber" data-min="-2" data-max="2" data-step="0.0625"></span> + <span data-var="f2_i" class="TKAdjustableNumber" data-min="-2" data-max="2" data-step="0.0625"></span><i>i</i>) / z</li>
-	<li>f<sub>3</sub> = (<span data-var="f3_r" class="TKAdjustableNumber" data-min="-2" data-max="2" data-step="0.0625"></span> + <span data-var="f3_i" class="TKAdjustableNumber" data-min="-2" data-max="2" data-step="0.0625"></span><i>i</i>) &times; z</li>
-	<li>f<sub>4</sub> = (<span data-var="f4_r" class="TKAdjustableNumber" data-min="-2" data-max="2" data-step="0.0625"></span> + <span data-var="f4_i" class="TKAdjustableNumber" data-min="-2" data-max="2" data-step="0.0625"></span><i>i</i>) + z</li>
+        <li>f<sub>1</sub> = (<span data-var="f1_r" class="TKAdjustableNumber" data-min="-2" data-max="2" data-step="0.0625"></span> + <span data-var="f1_i" class="TKAdjustableNumber" data-min="-2" data-max="2" data-step="0.0625"></span><i>i</i>) + z</li>
+        <li>f<sub>2</sub> = 1 / z</li>
+        <li>f<sub>3</sub> = (<span data-var="f3_r" class="TKAdjustableNumber" data-min="-2" data-max="2" data-step="0.0625"></span> + <span data-var="f3_i" class="TKAdjustableNumber" data-min="-2" data-max="2" data-step="0.0625"></span><i>i</i>) &times; z</li>
+        <li>f<sub>4</sub> = (<span data-var="f4_r" class="TKAdjustableNumber" data-min="-2" data-max="2" data-step="0.0625"></span> + <span data-var="f4_i" class="TKAdjustableNumber" data-min="-2" data-max="2" data-step="0.0625"></span><i>i</i>) + z</li>
       </ol>
       <div id="complex-transform">
-	<div id="w-transform">
-	</div>
+	<div id="z-plane"></div>
+	<div id="w-plane"></div>
       </div>
       <p>Or, if you prefer, f = ((<span data-var="a_r"></span> + <span data-var="a_i"></span>i)z + (<span data-var="b_r"></span> + <span data-var="b_i">i)) / (z + (<span data-var="d_r"></span> + <span data-var="d_i">i))
     </div>
