Add a description to the app.

--- a/moebius.html
+++ b/moebius.html
@@ -15,6 +15,7 @@
   <body>
     <div id="complex-transform">
 	<div id="value-store">
+          <p>A M&ouml;bius transformation is a complex-valued function of the form f(z) = (az + b) / (cz + d) where ad - bc &ne; 0. Each of a, b, c, d are complex numbers of the form (x + iy), where x and y are reals. Vary the constants below to explore various M&ouml;bius transformations.</p>
 	  <table>
 	    <thead><td>Variable</td><td>Real component</td><td>Imaginary component</td></thead>
 	    <tr><td>a</td><td><input type="text" id="a_r" name="a_r" value="0"/></td><td><input type="text" id="a_i" name="a_i" value="0"/></td></tr>
